test/tests/compiler/14_pointers/invalid_types/extra_credit/bitwise_lshift_pointer.plx
#  It's illegal to use pointer as right operand in bitshift
pub fn main(none) i32 {
    ptr: *i32 = 0
    i: i32 = 1000
    i >> ptr
    return nil
}
